# learnopengl

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  config.h  config.hpp  event.cpp  event.hpp  main.cpp  model.cpp  model.hpp  render.cpp  render.hpp  resource.hpp  todo.md
contrib/include/glad/: glad.h
contrib/lib/: IrrXML.lib  IrrXML_debug.lib  assimp-vc140-mt.lib  assimp.lib  assimp_debug.lib  freetype.lib  glfw3.lib  glfw3_debug.lib  libyaml-cppmd_debug.lib  zlibstatic.lib  zlibstatic_debug.lib
contrib/source/glad/: glad.c
render/: camera.cpp  camera.hpp  light.cpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  render.cpp  render.hpp  shader.cpp  shader.hpp  texture.cpp
resource/: config.yml  lights.yml  materials.yml  models.yml  posts.yml  procs.yml  uniforms.yml  vertexs.yml
resource/blender/: wall.blend
resource/light/: dir.yml  point.yml  spot.yml
resource/model/: lamp.yml  land.yml  light.yml  nanosuit.yml  sun.yml  test.yml
resource/model/ball/: ball.mtl
resource/model/lamp/: lamp.mtl
resource/model/land/: land.mtl
resource/model/sponza/: sponza.mtl
resource/model/sun/: sun.mtl
resource/model/wall/: wall.mtl
resource/scene/: scene.yml  scene_deferred.yml  scene_forward.yml  scene_pbr.yml  scene_sponza.yml  scene_tangent.yml  shadow_point.yml  test.yml
resource/shader/: bloom.frag  bloom.fs  bloom_split.frag  blur.frag  color.frag  color.fs  color.vs  cube.fs  cube.vs  defer_geo.frag  defer_geo.fs  defer_geo.vs  defer_light.frag  defer_light.fs  dir.fs  dof_blur.frag  dof_coc.frag  dof_scene.frag  forward.frag  fxaa.frag  grey.fs  grey.vs  hdr.frag  hdr.fs  ibl_cube.frag  ibl_cube.fs  ibl_cube.vs  ibl_diffuse.fs  ibl_env.fs  ibl_speccube.fs  ibl_speccube.geom  ibl_speccube.vs  ibl_speclut.frag  learn.fs  learn.vs  pbr_geo.frag  pbr_geo.fs  pbr_geo.vs  pbr_light.frag  pbr_light.fs  (+42 more)
resource/texture/sorbin/: sorbin_bk.tga  sorbin_dn.tga  sorbin_ft.tga  sorbin_lf.tga  sorbin_rt.tga  sorbin_up.tga
shader/: color.vs  phong.fs  phong.vs  simple.fs  simple.vs
source/: allin.hpp  config.hpp  event.cpp  event.hpp  main.cpp  system.cpp  system.hpp
source/render/: camera.cpp  camera.hpp  command.hpp  frame.cpp  frame.hpp  light.cpp  light.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  pass.cpp  pass.hpp  post.cpp  post.hpp  process.cpp  process.hpp  render.cpp  render.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  uniform.cpp  uniform.hpp  vertex.cpp  vertex.hpp
source/ui/: ui.cpp  ui.hpp
source/utils/: resource.cpp  resource.hpp  utils.cpp  utils.hpp
tool/: gen_models.py
tool/nodegraph/: editor.py  nodes.py  shaders.yaml
utils/: pattern.cpp  pattern.hpp  resource.hpp
